# Arch-Manager

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
gui/: CMakeLists.txt
gui/src/: main.cpp  main_window.cpp  main_window.h
src/: cli.rs  error.rs  main.rs
src/modules/: aur.rs  disks.rs  hardware.rs  health.rs  logs.rs  metrics.rs  mod.rs  network.rs  news.rs  pacman.rs  snapshots.rs  systemd.rs  updates.rs  users.rs
src/utils/: cmd.rs  mod.rs  output.rs
