[package]
name = "arch-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
which = "6.0"
serde_xml_rs = "0.6"
